--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "jubensha server",
   "main": "index.js",
   "scripts": {
-    "build":"tsc",
-    "test":"jest",
-    "test:watch":"jest --watch"
+    "build": "tsc",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "lint":"eslint"
   },
   "keywords": [],
   "author": "",
@@ -15,12 +16,20 @@
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.4.1",
+    "eslint": "^9.9.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^28.8.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.9.0",
     "jest": "^29.7.0",
+    "prettier": "3.3.3",
     "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.2.0"
   }
 }
