--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "dev": "dotenv -- nodemon",
     "test": "jest",
     "test:watch": "jest --watch",
-    "lint":"eslint"
+    "lint": "eslint"
   },
   "keywords": [],
   "author": "",
@@ -20,12 +21,14 @@
     "@tsconfig/node20": "^20.1.4",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.4.1",
+    "dotenv-cli": "^7.4.2",
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^28.8.0",
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.9.0",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.4",
     "prettier": "3.3.3",
     "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
