--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "pg": "^8.12.0",
+    "sequelize": "^6.37.3",
+    "sequelize-typescript": "^2.1.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.4.1",
+    "@types/validator": "^13.12.0",
     "dotenv-cli": "^7.4.2",
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
