--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "dotenv -- nodemon",
     "test": "jest",
     "test:watch": "jest --watch",
-    "lint": "eslint"
+    "lint": "eslint",
+    "seed": "ts-node src/seed.ts"
   },
   "keywords": [],
   "author": "",
